2009-02-23  Pablo Polvorin <pablo.polvorin@process-one.net>
	* src/ejabberd_c2s.erl, src/mod_echo.erl, src/mod_roster.erl,
	src/mod_roster_odbc.erl: Use exmpp_jid:to_binary/1 when possible.

	* src/mod_roster_odbc.erl, src/odbc/ejabberd_odbc.erl:
	ejabberd_odbc:escape/1 now can escape binaries too. This 
	avoid the need to convert a binary value to list() just to 
	sql-escape it. The escaped value returned is allways a list() 
	(ejabberd's odbc drivers only works on lists())

	* src/ejabberd_c2s.erl, src/mod_caps.erl, src/ejabberd_receiver.erl:
	Removed a couple of expensive function calls used as arguments for 
	?DEBUG macros. All arguments used in the ?DEBUG macro are strictly 
	evaluated (even if the loglevel is higher). The same is true for 
	all log macros defined in ejabberd.hrl.  We might need to use lazy
	evaluation for the arguments, when they are expensive to generate
	(wrap the arguments lists in a fun).

2009-02-23  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_c2s.erl: Do not call mod_caps:clear_caps, this previous
	optimization is too agressive and breaks PubSub/PEP standard behavior
	(EJAB-854)

2009-02-21  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/mod_roster.erl: Bugfix in remove_user/2: values already
	in binary() format.

2009-02-21  Badlop  <badlop@process-one.net>

	* src/ejabberd_auth.erl: Password is undefined when using digest

2009-02-20 Pablo Polvorin <pablo.polvorin@process-one.net>

	* src/mod_offline_odbc.erl, src/mod_privacy_odbc.erl, 
	src/ejabberd_auth.erl, src/mod_vcard_odbc.erl,
	src/mod_private_odbc.erl, src/mod_roster_odbc.erl: remove_user hook
	actualized to expect binary arguments. 

	* src/web/ejabberd_web_admin.erl: Fix add / remove users.

	* src/mod_configure.erl: Fix bug in form generation.
	

2009-02-19 Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix nodetree plugin resolver
